Keep toolbar fixed on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,9 +34,6 @@
 }
 
 @media (max-width: 600px) {
-    .example-toolbar {
-        position: absolute;
-    }
     #top-gap {
         height: 56px;
     }
